--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -1,6 +1,6 @@
-.wrapper{
-    width: 1600px;
-    height: 900px;
+.wrapper {
+    width: 100%;
     background: linear-gradient(180deg, rgba(106, 128, 240, 0.93) 0%, rgba(106, 128, 240, 0) 100%);
-
+    padding: 0 20px;
 }
+
