--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -48,7 +48,7 @@ a:hover {
     color: #ffffff; 
 }
 
-.btn-logOut__text{
+.button__logout__text{
     font-family: Montserrat;
     font-size: 24px;
 }
