--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -1,4 +1,4 @@
-.form-container {
+.form__container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,7 +24,7 @@
     align-items: center;
 }
 
-.userInput {
+.input {
     background: rgba(252, 252, 252, 0.58);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 50px;
@@ -37,7 +37,7 @@
     margin-bottom: 15px;
 }
 
-.logInBtn {
+.button__login {
     background: #8BACDF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 50px;
@@ -50,7 +50,7 @@
     padding: 20px;
 }
 
-.error-message{
+.error__message{
     color:#ff0000;
     font-size: 16px;
 }
