--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,3 +1,38 @@
 .footer {
-  background: tomato;
+  padding: 20px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: rgba(106, 128, 240, 0.93) 0%;
+  color: #ffffff; 
+}
+
+.nav {
+  display: flex;
+  flex-direction: column;
+
+  &__link {
+    font-size: 16px;
+    color: #ffffff;
+    text-shadow: 0px 4px 15px rgb(0 0 0 / 25%);
+    text-decoration: none;
+    cursor: pointer;
+    text-align: center;
+    margin-bottom: 5px;
+
+    &:hover {
+        text-decoration: underline; 
+        color: #ffffff; 
+    }
+  }
+}
+
+
+.social__links {
+  margin-right: 20px;
+}
+
+.social__icon {
+  height: 50px;
+  width: 50px;
 }
