--- a/src/components/MainContent/MainContent.module.scss
+++ b/src/components/MainContent/MainContent.module.scss
@@ -1,5 +1,63 @@
 .main {
   margin-bottom: 50px;
-  background: yellow;
-  height: 300px;
+  list-style-type: none;
+
+}
+
+.room {
+
+  border-bottom: 1px solid black;
+}
+.room__title {
+font-weight: bold;
+font-size: 36px;
+color: #FAF3F3;
+text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+}
+
+.room__info {
+  display: flex;
+  align-items: center;
+}
+
+.room__description {
+  display: flex;
+  flex-direction: column;
+  font-weight: bold;
+  font-size: 24px;
+  color: #0e0e0e;
+  text-shadow: 0px 4px 25px rgba(0, 0, 0, 0.25);
+  margin-left: 50px;
+
+}
+
+.room__buttons {
+  margin-left: 100px;
+}
+
+.room__buttons__more {
+  background: rgba(106, 128, 240, 0.93) 0%;
+border-radius: 50px;
+font-family: Montserrat;
+font-weight: bold;
+font-size: 16px;
+color: #F0E7E7;
+border-color: transparent;
+text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+margin-right: 10px;
+width: 150px;
+height: 70px;
+}
+
+.room__buttons__delete {
+  background: #ad3f3f;
+border-radius: 50px;
+font-family: Montserrat;
+font-weight: bold;
+font-size: 16px;
+color: #F0E7E7;
+border-color: transparent;
+text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+width: 150px;
+height: 70px;
 }
