--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -22,13 +22,16 @@
     align-items: center;
     color: #ffffff;
     text-shadow: 0px 4px 15px rgb(0 0 0 / 25%);
-    margin-right: 25px;
     text-decoration: none;
     cursor: pointer;
 
     &:hover {
         text-decoration: underline; 
         color: #ffffff; 
+    }
+
+    &:not(:last-child){
+        margin-right: 25px; 
     }
 }
 
@@ -40,7 +43,12 @@
     color: #ffffff;
     cursor: pointer;
     border: 0;
-    margin-left: 50px ;
+
+    &:hover {
+        transition: 1s ease-in-out;
+        background: #013569;
+      }
+  
 }
 
 .button__logout__text {
