--- a/src/components/MainContent/MainContent.module.scss
+++ b/src/components/MainContent/MainContent.module.scss
@@ -1,13 +1,28 @@
 .main {
-  margin-bottom: 50px;
-  list-style-type: none;
-
+  display: flex;
+  flex-direction: column;
+  padding: 20px 20px;
 }
+
 
 .room {
-
   border-bottom: 1px solid black;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px 0;
+
+  &:last-child {
+    border-bottom: 0;
+  }
 }
+
+
+.info__block {
+  display: flex;
+  align-items: center;
+}
+
 .room__title {
 font-weight: bold;
 font-size: 36px;
@@ -17,6 +32,7 @@ text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
 
 .room__info {
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -27,37 +43,65 @@ text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
   font-size: 24px;
   color: #0e0e0e;
   text-shadow: 0px 4px 25px rgba(0, 0, 0, 0.25);
-  margin-left: 50px;
-
+  margin-left: 20px;
 }
 
 .room__buttons {
-  margin-left: 100px;
+  font-family: Montserrat;
+  font-weight: bold;
+  font-size: 16px;
+  color: #F0E7E7;
+  border-color: transparent;
+  width: 150px;
+  height: 70px;
+  border-radius: 50px;
+  text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  &:hover {
+    border: 1px solid;
+    box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+    outline-color: rgba(255, 255, 255, 0);
+    outline-offset: 15px;
+    text-shadow: 1px 1px 2px #427388; 
+
+}
+
 }
 
 .room__buttons__more {
   background: rgba(106, 128, 240, 0.93) 0%;
-border-radius: 50px;
-font-family: Montserrat;
-font-weight: bold;
-font-size: 16px;
-color: #F0E7E7;
-border-color: transparent;
-text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
-margin-right: 10px;
-width: 150px;
-height: 70px;
+  margin-right: 10px;
+
 }
 
 .room__buttons__delete {
   background: #ad3f3f;
-border-radius: 50px;
-font-family: Montserrat;
-font-weight: bold;
-font-size: 16px;
-color: #F0E7E7;
-border-color: transparent;
-text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
-width: 150px;
-height: 70px;
 }
+
+.room__image {
+  width: 350px;
+  height: 250px;
+}
+
+
+.button__add {
+  display: flex;
+  align-items: center;
+  background: transparent;
+  color: #ffffff;
+  cursor: pointer;
+  border: 0;
+  width: 250px;
+  height: 70px;
+
+  &:hover {
+    transition: 1s ease-in-out;
+    background: #013569;
+  }
+}
+
+.button__add__text {
+  font-family: Montserrat;
+  font-size: 24px;
+}
+
