--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -49,6 +49,10 @@
     width: 300px;
     padding: 20px;
     cursor: pointer;
+    &:hover {
+        transition: 1s ease-in-out;
+        background: #278aec;
+      }
 }
 
 .error__message{
