--- a/src/components/MainContent/MainContent.module.scss
+++ b/src/components/MainContent/MainContent.module.scss
@@ -58,13 +58,9 @@ text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
   text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
   cursor: pointer;
   &:hover {
-    border: 1px solid;
-    box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
-    outline-color: rgba(255, 255, 255, 0);
-    outline-offset: 15px;
-    text-shadow: 1px 1px 2px #427388; 
-
-}
+    transition: 1s ease-in-out;
+    background: #4400ff;
+  }
 
 }
 
@@ -76,6 +72,10 @@ text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
 
 .room__buttons__delete {
   background: #ad3f3f;
+  &:hover {
+    transition: 1s ease-in-out;
+    background: #740000;
+  }
 }
 
 .room__image {
