--- a/src/components/MainContent/MainContent.module.scss
+++ b/src/components/MainContent/MainContent.module.scss
@@ -98,10 +98,10 @@ text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
     transition: 1s ease-in-out;
     background: #013569;
   }
+  &__text{
+    font-family: Montserrat;
+    font-size: 24px;
+  }
 }
 
-.button__add__text {
-  font-family: Montserrat;
-  font-size: 24px;
-}
 
