--- a/src/components/MainContent/MainContent.module.scss
+++ b/src/components/MainContent/MainContent.module.scss
@@ -1,4 +1,5 @@
 .main {
+  position: relative;
   display: flex;
   flex-direction: column;
   padding: 20px 20px;
@@ -24,4 +25,22 @@
   }
 }
 
+
+.popup {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: rgba(0,0,0, .5);
+
+  &__wrapper{
+    position: relative;
+    background: rgba(0,0,0, .5);
+    width: 300px;
+    height: 300px;
+  }
+}
 
