--- a/src/components/MainContent/MainContent.module.scss
+++ b/src/components/MainContent/MainContent.module.scss
@@ -38,9 +38,9 @@
 
   &__wrapper{
     position: relative;
-    background: rgba(0,0,0, .5);
-    width: 300px;
-    height: 300px;
+    background: rgb(255, 255, 255);
+    width: 800px;
+    height: 800px;
   }
 }
 
