--- a/src/components/RoomItem/RoomItem.module.scss
+++ b/src/components/RoomItem/RoomItem.module.scss
@@ -37,6 +37,7 @@ text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
   color: #0e0e0e;
   text-shadow: 0px 4px 25px rgba(0, 0, 0, 0.25);
   margin-left: 20px;
+  width: 500px;
 }
 
 .room__buttons {
