--- a/src/components/RoomItem/RoomItem.module.scss
+++ b/src/components/RoomItem/RoomItem.module.scss
@@ -27,6 +27,7 @@ text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 500px;
 }
 
 .room__description {
