--- a/src/components/PopUpBook/PopUpBook.module.scss
+++ b/src/components/PopUpBook/PopUpBook.module.scss
@@ -7,7 +7,7 @@
       font-family: Montserrat;
       font-weight: bold;
       font-size: 48px;
-      padding: 20px 55px;
+      margin-left: 150px;
 
     }
 
@@ -33,10 +33,48 @@
 
  &__btn {
    span {
-     font-size: 24px;
+     font-size: 16px;
    }
 
  }
 
+ &__img {
+   width: 40px;
+   height: 40px;
+   margin-right: 10px;
+ }
+
+ &__containerCheckboxes {
+   display: flex;
+   justify-content: space-around;
+   margin-bottom: 100px;
+ }
+ 
+ &__checkbox {
+   span {
+  display: flex;
+  align-items: center; 
+}
+label{
+&:not(:last-child) {
+  margin-bottom: 20px;
+   }
+  }
+ }
 }
 
+.room__info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+
+    &__title {
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    &__other {
+      font-size: 20px;
+    }
+}
