--- a/src/components/PopUpBook/PopUpBook.module.scss
+++ b/src/components/PopUpBook/PopUpBook.module.scss
@@ -1,6 +1,7 @@
 .popup {
   display: flex;
   justify-content: center;
+  
 
 
  &__title   {
@@ -8,7 +9,8 @@
       font-family: Montserrat;
       font-weight: bold;
       font-size: 48px;
-      align-self: center;
+      display: flex;
+      justify-content: center;
 
     }
 
