--- a/src/components/PopUpBook/PopUpBook.module.scss
+++ b/src/components/PopUpBook/PopUpBook.module.scss
@@ -42,6 +42,7 @@
  }
 
  &__container__checkboxes {
+   margin-top: 30px;
    display: flex;
    justify-content: space-around;
 
@@ -60,14 +61,6 @@
   }
  }
 
- &__guests {
-  margin-bottom: 30px;
-
-  input {
-    border-color: black;
-
-  }
-}
 
  &__booking{
    display: flex;
@@ -98,6 +91,13 @@
 }
 
 
+  h5 {
+    display: flex;
+    margin-top: 30px;
+    justify-content: center;
+  }
+
+
 }
 
 .room__info {
@@ -118,7 +118,6 @@
 }
 
 .event {
-  font-weight: bold;
   margin-bottom: 20px;
 }
 
