--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -36,7 +36,7 @@
 }
 
 
-.button__logout {
+.button__login {
     display: flex;
     align-items: center;
     background: transparent;
@@ -51,7 +51,7 @@
   
 }
 
-.button__logout__text {
+.button__login__text {
     font-family: Montserrat;
     font-size: 24px;
 }
