--- a/src/components/PopUpBook/PopUpBook.module.scss
+++ b/src/components/PopUpBook/PopUpBook.module.scss
@@ -2,19 +2,21 @@
   display: flex;
   justify-content: center;
   
-
-
- &__title   {
-    h2 {
-      font-family: Montserrat;
-      font-weight: bold;
-      font-size: 48px;
-      display: flex;
-      justify-content: center;
-
-    }
-
+  h6 {
+    font-family: Montserrat;
+    font-weight: bold;
+    margin-top: 20px;
+    text-align: center;
   }
+
+  h2 {
+    font-family: Montserrat;
+    font-weight: bold;
+    font-size: 48px;
+    display: flex;
+    justify-content: center;
+  }
+
 
  &__content {
   display: flex;
@@ -45,7 +47,12 @@
    margin-top: 30px;
    display: flex;
    justify-content: space-around;
-
+    
+   div {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 25px;
+   }
  }
  
  &__checkbox {
@@ -53,16 +60,10 @@
     display: flex;
     align-items: center; 
   }
-
-  label {
-    &:not(:last-child) {
-      margin-bottom: 20px;
-   }
-  }
  }
 
 
- &__booking{
+ &__booking {
    display: flex;
    flex-direction: column;
    align-items: center;
@@ -76,8 +77,9 @@
 
   &__input {
     display: flex;
-    margin-top: 10px;
+    margin-top: 20px;
     align-items: center;
+    justify-content: center;
   }
 }
 
@@ -88,8 +90,7 @@
 .room__info {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     text-align: center;
 
     &__title {
@@ -104,8 +105,6 @@
 
 }
 
-.event {
-  margin-bottom: 20px;
-}
+
 
 
