--- a/src/components/RoomItem/RoomItem.module.scss
+++ b/src/components/RoomItem/RoomItem.module.scss
@@ -25,13 +25,14 @@ text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
 
 
 .room__description {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  justify-items: start;
+  grid-gap: 5px;
   width: 500px;
   font-weight: bold;
   font-size: 24px;
   color: #0e0e0e;
-  text-shadow: 0px 4px 25px rgba(0, 0, 0, 0.25);
+  text-shadow: 0px 4px 25px rgb(0 0 0 / 25%);
 }
 
 .room__buttons {
