--- a/src/components/PopUpBook/PopUpBook.module.scss
+++ b/src/components/PopUpBook/PopUpBook.module.scss
@@ -17,6 +17,17 @@
     justify-content: center;
   }
 
+  fieldset {
+    align-items: center;
+  }
+
+  legend {
+    font-family: Montserrat;
+    font-weight: bold;
+    text-align: center;
+    color: #000000;
+    margin-bottom: 10px;
+  }
 
  &__content {
   display: flex;
@@ -44,10 +55,8 @@
  }
 
  &__container__checkboxes {
-   margin-top: 30px;
-   display: flex;
-   justify-content: space-around;
-    
+   margin-top: 20px;
+   
    div {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -77,7 +86,7 @@
 
   &__input {
     display: flex;
-    margin-top: 20px;
+    margin-bottom: 25px;
     align-items: center;
     justify-content: center;
   }
