--- a/src/components/RoomItem/RoomItem.module.scss
+++ b/src/components/RoomItem/RoomItem.module.scss
@@ -9,7 +9,6 @@
   }
 }
 
-
 .info__block {
   display: flex;
   justify-content: space-around;
@@ -17,12 +16,11 @@
 }
 
 .room__title {
-margin-left: 80px;
-font-weight: bold;
-font-size: 36px;
-text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+  margin-left: 80px;
+  font-weight: bold;
+  font-size: 36px;
+  text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
 }
-
 
 .room__description {
   display: grid;
@@ -39,7 +37,7 @@ text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
   font-family: Montserrat;
   font-weight: bold;
   font-size: 16px;
-  color: #F0E7E7;
+  color: #f0e7e7;
   border-color: transparent;
   width: 150px;
   height: 70px;
@@ -50,13 +48,11 @@ text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
     transition: 1s ease-in-out;
     background: #4400ff;
   }
-
 }
 
 .room__buttons__more {
   background: rgba(106, 128, 240, 0.93) 0%;
   margin-right: 10px;
-
 }
 
 .room__buttons__delete {
