--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -4,6 +4,7 @@
     align-items: center;
 }
 
+
 .title {
     font-size: 64px;
     color: #FFFFFF;
@@ -11,8 +12,9 @@
 }
 
 .logo {
-    width: 250px;
+    width: 100%;
     height: 250px;
+    max-width: 250px;
     filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.25));
 }
 
@@ -58,4 +60,21 @@
 .error__message{
     color:#ff0000;
     font-size: 16px;
+}
+
+
+@media screen and (max-width: 320px) {
+    .title {
+        font-size: 32px;
+    }
+    .input {
+        font-size: 16px;
+        padding: 15px 20px;
+    }
+
+    .button__login {
+        font-size: 16px;
+        width: 150px;
+        padding: 10px;
+    }
 }
