--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -63,7 +63,7 @@
 }
 
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 768px) {
     .title {
         font-size: 32px;
     }
@@ -76,5 +76,11 @@
         font-size: 16px;
         width: 150px;
         padding: 10px;
+    }
+
+    .form {
+        margin-top: 30px;
+        margin-bottom: 20px;
+ 
     }
 }
