fix adaptive all#2

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -32,3 +32,12 @@
   color: #ffffff; 
 }
 
+@media screen and (max-width: 320px) {
+  .nav__link {
+    font-size: 8px;
+  }
+  .footer__copyright{
+    font-size: 8px;
+  }
+
+}
