--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -82,12 +82,11 @@
         display: none;
     }
     .button__login {
-        position: absolute;
-        right: 0;
-        top: 0;
+        display: none;
     }
 
-    .header__logo {
-        padding: 40px 0 0 0;
-      }
+    .header {
+        flex-direction: column;
+
+    }
 }
