--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,6 @@
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 0 20px;
     align-items: center;
     background: rgba(106, 128, 240, 0.93) 0%;
