--- a/src/components/PopUpAdd/PopUpAdd.module.scss
+++ b/src/components/PopUpAdd/PopUpAdd.module.scss
@@ -40,3 +40,40 @@
 
 }
 
+@media screen and (max-width: 1080px) {
+  .popup__title {
+    h2 {
+      padding: 0;
+    }
+  }
+
+}
+
+@media screen and (max-width: 768px) {
+  .popup__title {
+    h2 {
+      padding: 0;
+      font-size: 24px;
+    }
+  }
+
+  .popup__btn {
+    span {
+      font-size: 8px;
+    }
+  }
+
+  .popup__input {
+    div {
+      margin-bottom: 10px;
+      font-size: 0.3rem;
+      }
+    }
+
+
+  .popup__btnClose {
+    width: 30px;
+    height: 30px;
+  }
+
+}
