popUp for mobile #3

--- a/src/components/RoomItem/RoomItem.module.scss
+++ b/src/components/RoomItem/RoomItem.module.scss
@@ -112,6 +112,13 @@
     font-size: 12px;
     width: 200px;
   }
+
+  .room__btn__bookings {
+    span {
+        padding: 0;
+        font-size: 0.5rem;
+      }
+    }
 }
 
 @media screen and (max-width: 380px) {
@@ -142,7 +149,17 @@
     align-items: flex-start;
   }
 
+  .room__btn__bookings {
+    span {
+        padding: 0;
+        font-size: 0.4rem;
+      }
+    }
 }
+
+
+
+
 
 
 
