--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -1,5 +1,8 @@
 .wrapper {
-    background: linear-gradient(180deg, rgba(106, 128, 240, 0.93) 0%, rgba(106, 128, 240, 0) 100%);
-    padding: 0 20px;
+  background: linear-gradient(
+    180deg,
+    rgba(106, 128, 240, 0.93) 0%,
+    rgba(106, 128, 240, 0) 100%
+  );
+  padding: 0 20px;
 }
-
