--- a/src/containers/PopUpBook/PopUpBook.module.scss
+++ b/src/containers/PopUpBook/PopUpBook.module.scss
@@ -2,6 +2,12 @@
   display: flex;
   justify-content: center;
 
+  &__error {
+    color: #ff0000;
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
+
   h6 {
     font-family: Montserrat;
     font-weight: bold;
